bugfix предыдущего коммита для ie8,9. из-за overflow:hidden и отсутствия flexbox едут пискели у иконок

--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -252,3 +252,14 @@
       padding-right: 4px;
    }
 }
+
+.ws-is-ie8, .ws-is-ie9 {
+  .controls-DropdownList .controls-DropdownList__selectedItem{
+    .controls-DropdownList__beforeCaptionWrapper{
+      top: -2px;
+    }
+    .controls-DropdownList__afterCaptionWrapper{
+      top: -4px;
+    }
+  }
+}
